--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,29 +1,30 @@
-<main>
-  <section>
-    <form action="/api/user/" method="POST">
-      <div class="card">
-        <label for="first_name">First name:</label>
-        <input type="text" name="first_name" id="first_name" placeholder="">
-        <label for="last_name">Last name:</label>
-        <input type="text" name="last_name" id="last_name" placeholder="">
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" placeholder="">
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" placeholder="">
-        <button class="btnSubmit" type="submit">Create Account</button>
-      </div>
-    </form>
-  </section>
 
-  <section>
-    <form action="/api/user/login" method="POST">
-      <div class="card">
-        <label for="User_email">Email:</label>
-        <input type="Login_email" name="email" id="User_email" placeholder="">
-        <label for="User_password">Password:</label>
-        <input type="password" name="password" id="User_password" placeholder="">
-        <button class="btnSubmit" type="submit">Login</button>
-      </div>
-    </form>
-  </section>
-</main>
+<h2 class="title pb-4">Log In</h2>
+<form id="login-form" class="card-body">
+  <div class="form-row">
+    <label class="form-label" for="username-login">Username</label>
+    <input id="username-login" type="text" autofocus="true" class="form-input form-control" />
+  </div>
+  <div class="form-row mb-3">
+    <label class="form-label" for="password-login">Password</label>
+    <input id="password-login" type="password" autofocus="true" class="form-input form-control" />
+  </div>
+  <button type="submit" class="btn">Login</button>
+</form>
+
+<h2 class="title pb-4">Not a member? Why not Sign up and Join on the conversation!</h2>
+<form id="signup-form" class="card-body">
+  <div class="form-row">
+    <label class="form-label" for="email-signup">Email</label>
+    <input id="email-signup" type="text" autofocus="true" class="form-input form-control" />
+  </div>
+  <div class="form-row">
+    <label class="form-label" for="username-signup">Username</label>
+    <input id="username-signup" type="text" autofocus="true" class="form-input form-control" />
+  </div>
+  <div class="form-row mb-3">
+    <label class="form-label" for="password-signup">Password</label>
+    <input id="password-signup" type="password" autofocus="true" class="form-input form-control" />
+  </div>
+  <button type="submit" class="btn">Signup</button>
+</form>
