--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,15 +7,30 @@
   <title>Blog Site</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/jass.css">
+
   <link rel="stylesheet" href="/public/css/style.css">
 </head>
 
-<body>
+<body class="bg-primary">
   <header class="display-flex justify-space-between align-center p-2">
     <h1>
-      User Registry
+      Tim's Tech Blog
     </h1>
+    <ul class="nav nav-tabs card-header-tabs  ">
+      <li class="nav-item ">
+        <a class="nav-link bg-primary text-white " href="/views/homepage.handlebars">Homepage</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link bg-primary text-white " href="#">Dashboard</a>
+      </li>
+      <li class="nav-item">
+        {{#if loggedIn}}
+        <a class="nav-link bg-primary text-white " href="logout" method="GET">Logout</a>
+        {{else}}
+        <a class="nav-link bg-primary text-white " href="/views/login.handlebars">Login</a>
+        {{/if}}
+      </li>
+    </ul>
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
