--- a/views/partials/post-details.handlebars
+++ b/views/partials/post-details.handlebars
@@ -1,5 +1,5 @@
-<div class="container row">
-    <div class="card-header dashboard-post">
+<div class="container row card text-bg-light mb-3border border-black rounded-2" style="border-width: 3px">
+    <div class="card-header dashboard-post ">
        <h4 class="card-title post-title"><a class="link" href="/post/{{id}}">{{title}}</a></h4>
         <div class="card-body post-body">
         <p class="card-body post-content">{{content}}</p>
