Fixed dotenv and fixed handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,22 +18,24 @@
     </h1>
     <ul class="nav nav-tabs card-header-tabs  ">
       <li class="nav-item ">
-        <a class="nav-link bg-primary text-white " href="/views/homepage.handlebars">Homepage</a>
+        <a class="nav-link bg-primary text-white " href="/">Homepage</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link bg-primary text-white " href="#">Dashboard</a>
+        <a class="nav-link bg-primary text-white " href="/dashboard">Dashboard</a>
       </li>
       <li class="nav-item">
         {{#if loggedIn}}
-        <a class="nav-link bg-primary text-white " href="logout" method="GET">Logout</a>
+        <a class="nav-link bg-primary text-white " href="/logout" method="GET">Logout</a>
         {{else}}
-        <a class="nav-link bg-primary text-white " href="/views/login.handlebars">Login</a>
+        <a class="nav-link bg-primary text-white " href="/login">Login</a>
         {{/if}}
       </li>
     </ul>
   </header>
-  <main class="container container-fluid mt-5">
+  <main class="container container-fluid mt-5 ">
+    <div class="row">
     {{{ body }}}
+    </div>
   </main>
   <footer>
 
