--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,30 +1,33 @@
+<div class="col">
+  <h2 class="title column pb-4">Log In</h2>
+  <form id="login-form" class="card-body">
+    <div class="form-row">
+      <label class="form-label" for="username-login">Username</label>
+      <input id="username-login" type="text" autofocus="true" class="form-input form-control" />
+    </div>
+    <div class="form-row mb-3">
+      <label class="form-label" for="password-login">Password</label>
+      <input id="password-login" type="password" autofocus="true" class="form-input form-control" />
+    </div>
+    <button type="submit" class="btn">Login</button>
+  </form>
+</div>
 
-<h2 class="title pb-4">Log In</h2>
-<form id="login-form" class="card-body">
-  <div class="form-row">
-    <label class="form-label" for="username-login">Username</label>
-    <input id="username-login" type="text" autofocus="true" class="form-input form-control" />
-  </div>
-  <div class="form-row mb-3">
-    <label class="form-label" for="password-login">Password</label>
-    <input id="password-login" type="password" autofocus="true" class="form-input form-control" />
-  </div>
-  <button type="submit" class="btn">Login</button>
-</form>
-
-<h2 class="title pb-4">Not a member? Why not Sign up and Join on the conversation!</h2>
-<form id="signup-form" class="card-body">
-  <div class="form-row">
-    <label class="form-label" for="email-signup">Email</label>
-    <input id="email-signup" type="text" autofocus="true" class="form-input form-control" />
-  </div>
-  <div class="form-row">
-    <label class="form-label" for="username-signup">Username</label>
-    <input id="username-signup" type="text" autofocus="true" class="form-input form-control" />
-  </div>
-  <div class="form-row mb-3">
-    <label class="form-label" for="password-signup">Password</label>
-    <input id="password-signup" type="password" autofocus="true" class="form-input form-control" />
-  </div>
-  <button type="submit" class="btn">Signup</button>
-</form>
+<div class="col">
+  <h2 class="title column pb-4">Not a member? Why not Sign up and Join on the conversation!</h2>
+  <form id="signup-form" class="card-body">
+    <div class="form-row">
+      <label class="form-label" for="email-signup">Email</label>
+      <input id="email-signup" type="text" autofocus="true" class="form-input form-control" />
+    </div>
+    <div class="form-row">
+      <label class="form-label" for="username-signup">Username</label>
+      <input id="username-signup" type="text" autofocus="true" class="form-input form-control" />
+    </div>
+    <div class="form-row mb-3">
+      <label class="form-label" for="password-signup">Password</label>
+      <input id="password-signup" type="password" autofocus="true" class="form-input form-control" />
+    </div>
+    <button type="submit" class="btn">Signup</button>
+  </form>
+</div>
