--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -4,7 +4,7 @@
     <div class="card post comment-box">
     <div class="card-body post-body">
         <div class="card-text comment-text">
-            {{comment_text}}
+            {{content}}
         </div>
         <div class="comment-author">
             -{{user.username}}, {{date_commented}}
