--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,8 @@
   <h2 class="title column pb-4">Log In</h2>
   <form id="login-form" class="card-body">
     <div class="form-row">
-      <label class="form-label" for="username-login">Username</label>
-      <input id="username-login" type="text" autofocus="true" class="form-input form-control" />
+      <label class="form-label" for="email-login">Email</label>
+      <input id="email-login" type="text" autofocus="true" class="form-input form-control" />
     </div>
     <div class="form-row mb-3">
       <label class="form-label" for="password-login">Password</label>
@@ -14,20 +14,21 @@
 </div>
 
 <div class="col">
-  <h2 class="title column pb-4">Not a member? Why not Sign up and Join on the conversation!</h2>
+  <h2 class="title column pb-4">Not a member? Why not Sign up and Join the conversation!</h2>
   <form id="signup-form" class="card-body">
     <div class="form-row">
       <label class="form-label" for="email-signup">Email</label>
-      <input id="email-signup" type="text" autofocus="true" class="form-input form-control" />
+      <input id="email-signup" name="email" type="text" autofocus class="form-input form-control" />
     </div>
     <div class="form-row">
       <label class="form-label" for="username-signup">Username</label>
-      <input id="username-signup" type="text" autofocus="true" class="form-input form-control" />
+      <input id="username-signup" name="username" type="text" autofocus class="form-input form-control" />
     </div>
     <div class="form-row mb-3">
       <label class="form-label" for="password-signup">Password</label>
-      <input id="password-signup" type="password" autofocus="true" class="form-input form-control" />
+      <input id="password-signup" name="password" type="password" class="form-input form-control" />
     </div>
     <button type="submit" class="btn">Signup</button>
   </form>
 </div>
+<script src="../public/js/login.js"></script>
