--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,4 +31,6 @@
     <button type="submit" class="btn">Signup</button>
   </form>
 </div>
-<script src="../public/js/login.js"></script>
+
+<script src=".././public/js/login.js"></script>
+<script src=".././public/js/signup.js"></script>
