--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,12 +1,21 @@
 <div class="container row card text-bg-light mb-3border border-black rounded-2" style="border-width: 3px">
     <div class="card-header dashboard-post ">
-       <h4 class="card-title post-title">{{post.title}}</h4>
+        <h4 class="card-title post-title">{{post.title}}</h4>
         <div class="card-body post-body">
-        <p class="card-body post-content">{{post.content}}</p>
-        <p class="card-text post-author">Posted by <span class="post-username">{{user.username}}</span> on {{date_posted}}</p>
+            <p class="card-body post-content">{{post.content}}</p>
+            <p class="card-text post-author">Posted by <span class="post-username">{{post.poster_name}}</span> on
+                {{post.date_posted}}</p>
         </div>
     </div>
 </div>
+<form>
+    <div class="container row card text-bg-light mb-3border border-black rounded-2" style="border-width: 3px">
+        <div class="card-header dashboard-post">
+            <input id="optional-comment" type="text" autofocus="true" style="margin: 0.5%; width: 85%"/><button type="submit"  class="btn btn-primary" id="comment-btn btn">Comment</button>
+        </div>
+    </div>
+    </div>
+</form>
 {{#each Comments as |Comment| }}
 <article class="comment">
     {{> comment-details Comment}}
