--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="col text-bg-light mb-3border p-3 border-black rounded-2">
     <h2 class="title column pb-4">Something on your mind? Why not talk about!</h2>
     <form id="post-form" class="card-body">
         <div class="form-row">
@@ -8,7 +8,7 @@
             <textarea id="post-content" type="text" autofocus="true" class="form-input form-control"
                 placeholder="Content"></textarea>
         </div>
-        <button type="submit" class="btn" id="post-btn" >Post</button>
+        <button type="submit" class="btn btn-primary" id="post-btn " >Post</button>
     </form>
 </div>
 
