Think Im finished

--- a/views/partials/comment-details.handlebars
+++ b/views/partials/comment-details.handlebars
@@ -7,7 +7,7 @@
             {{content}}
         </div>
         <div class="comment-author">
-           By {{user.username}}, 
+           By {{User.username}}, 
         </div>
         <div class ="comment-date">
             Commented on: {{date_commented}}
@@ -16,4 +16,3 @@
     </div>
  
 </div>
-<script>console.log('Here')</script>
