Fixed user Number Issue

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -37,7 +37,7 @@
 <script>
 
   const postConent = document.querySelector('.card-body.post-content')
-  postUserID = {{post.user.id}}
+  postUserID = {{post.User.id}}
   currentUserID = {{user_id}}
   console.log(postUserID)
   console.log(currentUserID)
